namespace DefaultNamespace
{
    public interface ICommand
    {
        public void Execute();
    }
}