namespace DefaultNamespace
{
    public interface IObserver
    {
        void UpdatePipes(ISubject subject);
    }
}